Version 1.5102:
- Fix xz test skip for when xz is not installed

Version 1.5101: Sat Apr 4 2015
- Add a version check for lzip, to make sure the .lz file can be decompressed
  properly during testing. Thanks to Paul Howarth <paul@city-fan.org> for the
  suggestion.
- Fix warning about deleting nonexistent test cache
- Enhance "make test TEST_VERBOSE=1" to dump debug information
- Work around a POD-stripping bug that would cause module load to fail on some
  platforms

Version 1.5100: Sun Mar 22 2015
- Moved code to github
- Added xz support.
  https://rt.cpan.org/Ticket/Display.html?id=68286
  Thanks to sascha@trimind.de for initial patches.
- Added lzip support.
  Thanks to an anonymous submitter for the idea.
  http://sourceforge.net/p/grepmail/patches/8/
- Added POD test
- Fixed hang in pure Perl implementation for a malformed mbox file scenario.
  Thanks to Jason Brooks <jason@petting-zoo.org> for providing an mbox
  that found this bug.
- Fixed $OLDSTDERR used only once warning.
  https://rt.cpan.org/Ticket/Display.html?id=58053
  Thanks to paul@city-fan.org for the bug report and patch.
- Fixed enabling of warnings.
  https://rt.cpan.org/Ticket/Display.html?id=79898
  Thanks to atourbin@cpan.org for the bug report and patch.
- Fixed a division by zero error for malformed mbox files that start with a
  newline.
  https://rt.cpan.org/Ticket/Display.html?id=69469
  Thanks to vadz@cpan.org for the bug report.
- Fix bug in M::M::Perl documentation.
  Thanks to Christopher Orsolits <chris@s7logic.com> for spotting it.
- Add more cache file validation.
  Thanks to Richard Higson <richard.higson@gt.owl.de> for reporting the
  problem.

Version 1.5002: Sun Aug 9 2009
- Disabled the grep interface, which has had some tricky bugs that I don't
	have time to figure out.
- Fixed infinite loop that occurred for emails of less than 200 characters.
	(Thanks to Julian Ladisch <bitcard.org-prt@ladisch.de> for the bug report.)